[project]
name = "gen-ai-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.31.2",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.17",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "transformers>=4.51.3",
]
